--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifier =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.11    
     Topic :: System :: Distributed Computing
 project_urls =
     Bug Tracker = https://github.com/DLBD-Department/async_etcd3gw/issues
